...
            ) {
                Text(text = "Save")
            }
        },
        dismissButton = {
            TextButton(onClick = onDismiss) {
                Text(text = "Cancel")
            }
        },
        title = { Text(text = "API endpoint") },
        text = {
            androidx.compose.foundation.layout.Column {
                OutlinedTextField(
...
